<resources>
    <string name="app_name">GANAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_config">Configuración</string>
    <string name="action_cambiar_clave">Cambiar Contraseña</string>
    <string name="action_perfil">Ver Perfil</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_lider">Equipo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_admin">Configuración</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_equipo">Ministerios</string>
    <string name="menu_agenda">Agenda de Eventos</string>
    <string name="menu_ganar">Ganar</string>
    <string name="menu_conteo">Conteo</string>
    <string name="menu_reporte_ganar">Reporte Ganar</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_login_out">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>